2008-11-11  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tcl.m4:       reverted change from 2008-11-06 (was under the impression
	                    that "-Wno-implicit-int" added an extra warning)
	* win/configure     (regenerated)

2008-11-09  Joe English  <jenglish@users.sourceforge.net>

	* generic/ttk/ttkWidget.c: Remove unnecessary casts.

	* generic/ttk/ttkWidget.h, generic/ttk/ttkWidget.c:
	Ttk widget initializeProc()s now return void instead of
	a status code, and are no longer allowed to fail.
	(Fix for [Bug 2207435] in progress).

	* generic/ttk/ttkButton.c, generic/ttk/ttkEntry.c,
	generic/ttk/ttkFrame.c, generic/ttk/ttkNotebook.c,
	generic/ttk/ttkPanedwindow.c, generic/ttk/ttkProgress.c,
	generic/ttk/ttkScale.c, generic/ttk/ttkScrollbar.c,
	generic/ttk/ttkTreeview.c: Adjustments for the above.


2008-11-09  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkCanvas.c:    make all Tk_CustomOption tables const and
	* generic/tkCanvBmap.c:  remove unnecessary type cast
	* generic/tkCanvImg.c:
	* generic/tkCanvPoly.c:
	* generic/tkCanvText.c:
	* generic/tkCanvWind.c:
	* generic/tkRectOval.c:
	* generic/tkScrollbar.c:
	* generic/tk.decls:     Two more (hopefully the last) signature changes
	* generic/tkInt.h:      in Tk_CreateSmoothMethod and Tk_CreatePhotoImageFormat
	* generic/tkCanvLine.c
	* generic/tkCanvUtil.c
	* generic/tkImgPhoto.c
	* generic/tkDecls.h: (regenerated)
	* doc/CrtImgType.3   doc updates
	* doc/CrtPhImgFmt.3

2008-11-06  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tcl.m4:       add "-Wno-implicit-int" flag for gcc, as on UNIX
	* win/configure     (regenerated)
	* generic/default.h Use tkUnixDefault.h under CygWin. With this change,
	                    at least the X11 version of Tk can be built with cygwin

2008-11-06  Donal K. Fellows  <dkf@users.sf.net>

	* unix/configure.in: Work around the fact that the HP-UX system
	compiler cannot handle 'inline'. [Bug 2229999]

2008-11-05  Jan Nijtmans  <nijtmans@users.sf.net>
