@@ -1,3 +1,8 @@
+2008-11-11  Joe English  <jenglish@users.sourceforge.net>
+
+	* generic/ttk/ttkWidget.c(BeginDrawing): Don't crash when 
+	application uses nondefault visual [Bug 2264732].
+
 2008-11-11  Jan Nijtmans  <nijtmans@users.sf.net>
 
 	* win/tcl.m4:       reverted change from 2008-11-06 (was under the impression
